[package]
name = "blog_os"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.8"
volatile = "0.2.6"
spin = "0.9.2" 
x86_64 = "0.14.2"
uart_16550 = "0.2.0"

# [profile.dev]
# panic = "abort"

# [profile.release]
# panic = "abort"

# # [unstable]
# # build-std-features = ["compiler-builtins-mem"]
# # build-std = ["core", "compiler-builtins"]

# [build]
# target = "x86_64-blog_os.json"

# [target.'cfg(target_os = "none")']
# runner = "bootimage runner"

[package.metadata.bootimage]
build-command = ["xbuild"]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33         # (0x10 << 1) | 1

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

